# RAG_LEARNING

./: README.md  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestParsing/data/structured_files/: inventory.xlsx
0-DataIngestParsing/data/text_files/: python_intro.txt
